# amtf-engine

./: Cargo.toml  README.md
models/: Cube.blend  Cube.blend1  Cube.mtl  Plane.blend  Plane.blend1  Plane.mtl  Portal.blend  Portal.blend1  Portal.mtl  Scene.blend  Scene.blend1  Scene.mtl
shaders/2dVectorModel/: shader.frag
shaders/BasicModel/: shader.frag  shader.vert
shaders/BasicModelDepthOnly/: shader.frag  shader.vert
shaders/DebugWidget/: shader.frag
shaders/DirectionalLightingPass/: shader.frag  shader.vert
shaders/FinalPass/: shader.frag  shader.vert
shaders/LightSource/: shader.frag  shader.vert
shaders/PointLightingPass/: shader.frag
shaders/Portal/: shader.frag
shaders/SpotLightingPass/: shader.frag
src/: buffers.rs  f32_2d_vector_to_3d_model.rs  globals.rs  main.rs  material_structs.rs  models.rs  shaders.rs  winsdl.rs
